--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -25,7 +25,10 @@ a {
 .container {
     max-width: 978px;
     margin: 0 auto;
-    padding: 2rem;
+}
+
+.list-wrapper {
+    display: flex;
 }
 
 /***************************************************************
@@ -88,6 +91,7 @@ header .list-item.active::after {
 main {
     font-size: 0.75rem;
     line-height: 1.7;
+    padding: 2rem;
 }
 
 main h3,
@@ -127,4 +131,35 @@ ol.alpha,
 
 ol.alpha {
     padding-left: 1rem;
+}
+
+/***************************************************************
+***************** FOOTER
+***************************************************************/
+
+footer {
+    background-color: #f5f5f5;
+    line-height: 2.19;
+    padding: 10px 15px 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul {
+    font-weight: 300;
+    font-size: 0.5rem;
+}
+
+footer li:not(:first-child):before {
+    content: "\0000b7";
+    padding: 0 5px;
+}
+
+footer .lang-container {
+    font-size: 0.75rem;
+}
+
+footer .lang {
+    font-size: 0.75rem;
 }
