--- a/css/app.css
+++ b/css/app.css
@@ -141,6 +141,9 @@ footer {
     background-color: #f5f5f5;
     line-height: 2.19;
     padding: 10px 15px 10px 15px;
+}
+
+footer .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
